[project]
name = "testflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Rehman", email = "121764862+KingAbdulRehman@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.70",
    "litellm>=1.60.8",
    "python-dotenv>=1.0.1",
]

[project.scripts]
testflow = "testflow:main"
simpleflow = "testflow.simpleFlow:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
